[project]
name = "ConnectAnyL"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "lizqwerscott", email = "lizqwerscott@163.com"},
]
dependencies = [
    "requests>=2.28.2",
    "pyperclip>=1.8.2",
    "websocket-client>=1.5.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = true
[tool.pdm.scripts]
start = "python src/connectanyl/main.py"

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs"
]
extraPaths = ["__pypackages__/3.11/lib/"]
stubPath = "stubs"
