[project]
name = "connectanyl"
version = "0.1.0"
description = "Add your description here"
authors = [
    {name = "lizqwerscott", email = "lizqwerscott@163.com"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.32.4",
    "websocket-client>=1.8.0",
]

[tool.pyright]
defineConstant = { DEBUG = true }
# stubPath = "stubs"

reportMissingImports = true
reportMissingTypeStubs = false

venvPath = "."
venv = ".venv"
